--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,4 @@
 .blog-content-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: column; }
+  justify-content: center; }
